--- a/src/components/Table/QRContentTable.module.scss
+++ b/src/components/Table/QRContentTable.module.scss
@@ -15,3 +15,14 @@
     }
   }
 }
+
+.dimensionsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: rem(8);
+  max-width: rem(160);
+
+  @include tablet-landscape-up {
+    flex-direction: row;
+  }
+}
