--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,10 +1,10 @@
-@use 'functions' as *;
+@use "functions" as *;
 
 /* Color Pallette */
 $primary: #61dafb;
 $secondary: #ff6600;
-$button-hover:#358bbd;
-$bg-color:#282c34;
+$button-hover: #358bbd;
+$bg-color: #282c34;
 
 // Action
 $action: #fff;
