--- a/src/views/QRGenerator.module.scss
+++ b/src/views/QRGenerator.module.scss
@@ -19,6 +19,10 @@
   justify-content: space-between;
   gap: rem(16);
   flex-wrap: wrap;
+
+  &:empty {
+    display: none;
+  }
 }
 
 .saveAsTxtButton {
