--- a/src/containers/GlobalLayout.module.scss
+++ b/src/containers/GlobalLayout.module.scss
@@ -1,8 +1,12 @@
-@use 'sass:math';
-@use '../styles/utils' as *;
+@use "sass:math";
+@use "../styles/utils" as *;
 
 .contentContainer {
+  display: flex;
   background-color: $bg-color;
-  padding: rem(32);
   height: 100vh;
+
+  & > *:nth-child(2) {
+    padding: rem(32);
+  }
 }
