--- a/src/views/HipsterIpsumGenerator.module.scss
+++ b/src/views/HipsterIpsumGenerator.module.scss
@@ -19,13 +19,16 @@
 
 .textContainer {
   position: relative;
+  overflow: hidden;
 
   flex: 1;
-  overflow: auto;
   border: 1px solid $primary;
-  padding: rem(16);
+  padding: rem(8);
   p {
+    overflow: auto;
+    height: 100%;
     white-space: pre-line;
+     padding: rem(8);
 
     @include text($white, $font-size-m, $line-height-m, $font-regular);
   }
@@ -33,11 +36,11 @@
 
 .copyButton {
   position: sticky !important;
-  left: 100%;
+  left: 95%;
   bottom: 1%;
   padding: 0;
   background-color: $secondary !important;
-  opacity: 0.8;
+  opacity: 0.7;
   &:hover {
     transition: opacity 0.3s ease-in-out;
     opacity: 1;
