--- a/src/views/QRGenerator.module.scss
+++ b/src/views/QRGenerator.module.scss
@@ -17,8 +17,11 @@
 
   & > div > textarea {
     position: absolute;
-    max-height: 95%;
+    max-height: 90%;
     max-width: 95%;
+    @include desktop-up {
+      max-height: 97%;
+    }
   }
 }
 
